chore #6: Changes based on PR comment
added some more 'it' so almost every one has just one expect

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,6 @@
 
 en:
   not_authorized: 'You are not authorized to perform this action.'
+  user:
+    updated: 'User updated successfully'
+    not_updated: 'User update failed'
