--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,5 +5,5 @@ en:
     not_updated: "User update failed"
     follow_success: "You are following %{user_name}"
     follow_failure: "There was an error following %{user_name}"
-    unfollow: "You are no longer following %{user_name}"
-    
+    unfollow_success: "You are no longer following %{user_name}"
+    unfollow_failure: "Couldn't unfollow %{user_name}, please try again later"
