feat #15: Add endpoint for user posts with api-key
authentication

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,3 +13,6 @@ en:
     destroyed: "The post was destroyed successfully"
     updated: "The post was updated successfully"
     not_updated: "The post update failed"
+  api_key: 
+    updated: "Api key generated successfully"
+    not_updated: "Api key generation failed"
